fixed misaligned bouncing down arrow

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -14,6 +14,7 @@ html>body .full-screen {
 }
 
 #splash {
+  text-align: center;
   position: relative;
   background: url(/assets/img/splash.svg) center center no-repeat $brand-color;
   background-size: $splash-width $splash-width, contain;
@@ -24,6 +25,7 @@ html>body .full-screen {
 }
 
 #splash-button {
+  padding-right: 5rem;
   height: 10%;
   width: 100%;
   position: absolute;
